Fix discovery logic, stealth UX, and session handling

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         .ink-stamp {
             position: relative;
             mix-blend-mode: screen;
-            -webkit-mask-image: url('https://www.transparenttextures.com/patterns/carbon-fibre.png');
-            mask-image: url('https://www.transparenttextures.com/patterns/carbon-fibre.png');
+            /* mask-image removed to fix CORS error */
         }
 
         .hide-scrollbar::-webkit-scrollbar {
